src/validation/tests/snapshots/rusty__validation__tests__reference_resolve_tests__reference_to_private_variable_in_intermediate_fb.snap
---
source: src/validation/tests/reference_resolve_tests.rs
expression: "&diagnostics"
---
error[E049]: Illegal access to private member fb1.f
   ┌─ <internal>:19:19
   │
19 │                 a.f.x := 7;
   │                   ^ Illegal access to private member fb1.f


